changelog for all my changes as i make them so i dont forget again.
V0.7.21:
save compatible with 0.7.20.1+
    added a new sub market, wish is added a market when you build a 'AI Node Production Facility'
        -this market sells command nodes as admins and officers. i think its cool.
V0.7.20.2:
save compatible with 0.7.20.1+
    fixes: fixed 'patchwork AI-retrofit' and AI-retrofit crash when both hullmods were unlocked.
    background:
        dont worry about it.
V0.7.20.1:
updated to 0.96a.
    background: worked on something cool

V0.7.20: (was only released as a private project. is part of the 0.7.20.1 update.)
save compatible with 0.7.9+
    mod compatibility:
        made it so combat and salvage robots could be used in 'nomadic survivals' planetary operations (once crew replacer supports this)
    improvements:
        added 108 first and last names to possible names for command nodes. (got them from a online name generator. feel free to suggest more names / name generators.)
    fixes:
        fixed AIRetrofit hull-mod sometimes not displaying its repair time increase correctly.
        made AIRetrofit hull-mod be a little more clear on how mush repair speed is slowed down hopefully.
        possably fixed a issue that might have been causing crashes?
    new:
        added a new hullmod, patchwork AIRetrofits. for when you want to fly the ship back to the spaceport with no crew.
    background work:
        did some background work for adding a new hull-mod or 2.
        did some background work for a interesting item.
v0.7.19.1:
save compatible with 0.7.9+
    improvements: a handful more edits (thanks again 'FrownTown' for edits)
v0.7.19:
save compatible with 0.7.9+
    improvements:
        edited a bunch of text (thank you 'FrownTown' for editing all the text to be more readable)
        changed the robotic population and infrastructure test to something none placeholder, if boring. as well as adding it the the settings
v0.7.18.1: