@@ -3,6 +3,9 @@ V0.7.21:
 save compatible with 0.7.20.1+
     added a new sub market, wish is added a market when you build a 'AI Node Production Facility'
         -this market sells command nodes as admins and officers. i think its cool.
+    added a new item called a 'sub command node'.
+        -this item can only be found in the new sub-market.
+        -it can be activated to get a new officer or admen.
 V0.7.20.2:
 save compatible with 0.7.20.1+
     fixes: fixed 'patchwork AI-retrofit' and AI-retrofit crash when both hullmods were unlocked.
